# irm_jetson

./: .gitignore  CMakeLists.txt  Makefile  README.md  system-setup-helper.sh
cmake/: builder.cmake  scripts.cmake
docs/: motor_can_protocol.md
scripts/: CMakeLists.txt  minipc-tmux-daemon-helper.sh  minipc_tmux_daemon_helper.sh  system-setup-helper.sh  system_setup_helper.sh
src/: CMakeLists.txt  test.cc
src/examples/: CMakeLists.txt  can.cc  can_recieve.cc  can_send.cc  create_minipc_packet.cc  motor_m3508.cc  uart_example  uart_example.cc  uart_minipc.cc
src/include/board/: can.cc  can.h  crc8.cc  crc8.h  main.h  minipc_protocol.cc  minipc_protocol.h  uart.cc  uart.h  utils.cc  utils.h
src/include/motor/: error_handler.cc  error_handler.h  motor.cc  motor.h  utils.h
src/shared/lib/: error_handler.h  motor.cc  motor.h  uart.cc  utils.cc  utils.h
src/tests/: CMakeLists.txt  can.cc  feedback_frame.cc  motor.cc  motor_m3508.cc
src/vehicles/: CMakeLists.txt
src/vehicles/engineer/: CMakeLists.txt  chassis_thread.cc  chassis_thread.h  main.cc
src/vehicles/infantry/: CMakeLists.txt  main.cc
